[project]
name = "leetcode"
version = "0.0.1"
description = ""
authors = [{ name = "Matthew Stacks", email = "m@mstacks.dev" }]
dependencies = []
requires-python = ">=3.11"
license = { text = "MIT" }
[project.optional-dependencies]

[tool.black]
line-length = 79
skip-string-normalization = false
skip-magic-trailing-comma = true

[tool.pdm.scripts]

[tool.pdm.dev-dependencies]
format = [
    "black>=22.10.0",
    "isort>=5.10.1",
]
test = [
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.58.0",
]
nb = [
    "ipython>=8.6.0",
    "nbqa>=1.5.3",
]
[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
